--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -7,7 +7,7 @@ disqus:
 google-ID: ''
 
 menu:
-- {name: 'Home',    url: 'federicobianchi.io'}
+- {name: 'Home',    url: ''}
 - {name: 'About',   url: 'about.html'}
 - {name: 'Contact', url: 'contact.html'}
 
