--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@ markdown:            kramdown
 highlighter:         rouge
 permalink:           pretty
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
-website:             federicobianchi.io
+baseurl:             federicobianchi.io
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           'Federico Bianchi'
