--- a/_config.yml
+++ b/_config.yml
@@ -20,6 +20,7 @@ permalink:           pretty
 plugins:             [jekyll-paginate, jekyll-sitemap, jekyll-feed, jekyll-seo-tag]
 website:             https://federicobianchi.io
 baseurl:             ""
+url:                "https://federicobianchi.io"
 
 # Customise atom feed settings (this is where Jekyll-Feed gets configuration information)
 title:		           'Federico Bianchi'
