--- a/_data/settings.yml
+++ b/_data/settings.yml
@@ -8,8 +8,8 @@ google-ID: ''
 
 menu:
 - {name: 'Home',    url: ''}
-- {name: 'About',   url: 'about.html'}
-- {name: 'Contact', url: 'contact.html'}
+- {name: 'About',   url: 'about/'}
+- {name: 'Contact', url: 'contact/'}
 
 # Available social icons are powered by Font Awesome, so you can use any icon that they offer
 social:
